# openfx-arena

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  .travis.yml.old  CMakeLists.txt  ChangeLog.md  LICENSE  Makefile  Makefile.io  Makefile.master  Makefile.mingw  README.md  build-release.sh  build.sh  build_Text.sh  deploy.sh  openfx-arena.pro  openfx-arena.spec
Arc/: Arc.cpp  Arc.h  Info.plist  Makefile  PluginRegistration.cpp
Arena.xcodeproj/: project.pbxproj
ArenaCL/: Info.plist  Makefile
ArenaIO/: ArenaIO.cpp  ArenaIO.h  Info.plist  Makefile  PluginRegistration.cpp
Audio/: AudioCurve.cpp  Info.plist  Makefile
AudioCurve/: AudioCurveOFX.cpp  CMakeLists.txt  Info.plist.in  Makefile  README.md
BlackmagicRAW/: BlackmagicRAWHandler.cpp  BlackmagicRAWHandler.h  BlackmagicRAWPlugin.cpp  COPYRIGHT  GenericReader.patch  Info.plist  Makefile  README.md
Bulge/: Bulge.cpp  Makefile  net.fxarena.opencl.Bulge.cl
Bundle/: Makefile  PluginRegistrationCombined.cpp  manifest
BundleCL/: Makefile
Cartoon/: Makefile
Charcoal/: Charcoal.cpp  Charcoal.h  Info.plist  Makefile  PluginRegistration.cpp  manifest
DaveHill/: DaveHill.cpp  DaveHill.h  Info.plist  Makefile  PluginRegistration.cpp
Distort/: Distort.cpp  Distort.h  Info.plist  Makefile  PluginRegistration.cpp
Dragan/: Dragan.cpp  Dragan.h  Info.plist  Makefile  PluginRegistration.cpp
Duotone/: Info.plist  Makefile  net.fxarena.opencl.Duotone.cl
Edges/: Edges.cpp  Edges.h  Info.plist  Makefile  PluginRegistration.cpp
Emboss/: Emboss.cpp  Emboss.h  Makefile  PluginRegistration.cpp
Extra/: Info.plist  Makefile  OpenRaster.cpp  PluginRegistrationCombined.cpp  README.md  ReadCDR.cpp  ReadKrita.cpp  ReadPDF.cpp  ReadSVG.cpp  TextFX.cpp  fx.h  map-path-onto.c
ExtraFX/: Info.plist  Makefile  PluginRegistrationCombined.cpp
ExtraIO/: Info.plist  Makefile  PluginRegistrationCombined.cpp
Filter/: Arc.cpp  Implode.cpp  Makefile  MotionBlur.cpp  MotionBlur.h  PluginRegistration.cpp  Polar.cpp  Polar.h  Swirl.cpp  UnsharpMask.cpp  UnsharpMask.h
GMIC/: GmicGeneric.cpp  GmicGeneric.h  Info.plist  Makefile  PluginRegistration.cpp  README.md  gmic_def.h
Glow/: Glow.cpp  Glow.h  Info.plist  Makefile  PluginRegistration.cpp
Helpers/: CairoHelper.cpp  CairoHelper.h
Image/: Info.plist  Makefile  Text.cpp
Implode/: Implode.cpp  Implode.h  Info.plist  Makefile  PluginRegistration.cpp  magick-6.9.1-10-implode_swirl-center_adjust-hack.diff
Magick/: Arc.cpp  Charcoal.cpp  Edges.cpp  Implode.cpp  MagickCommon.h  MagickEdge.cpp  MagickEdge.h  MagickFX.cpp  MagickImplode.cpp  MagickImplode.h  MagickMirror.cpp  MagickMirror.h  MagickModulate.cpp  MagickModulate.h  MagickMotionBlur.cpp  MagickMotionBlur.h  MagickPlugin.cpp  MagickPlugin.h  MagickSwirl.cpp  MagickSwirl.h  MagickText.cpp  MagickTile.cpp  MagickTile.h  Makefile  Makefile.Magick  Modulate.cpp  Oilpaint.cpp  PluginRegistration.cpp  Polar.cpp  Polaroid.cpp  README.md  ReadMisc.cpp  ReadPSD.cpp  Reflection.cpp  Roll.cpp  Sketch.cpp  Swirl.cpp  Text.cpp  Texture.cpp  Tile.cpp  (+3 more)
Midi/: CMakeLists.txt  Info.plist  MidiInOFX.cpp  README.md
Mirror/: Makefile  Mirror.cpp  PluginRegistration.cpp
Modulate/: Info.plist  Makefile  Modulate.cpp  Modulate.h  PluginRegistration.cpp
OCL/: Bulge.cpp  CLSobel.cpp  CMakeLists.txt  Duotone.cpp  EdgeCL.cpp  Info.plist  Makefile  OCLPlugin.cpp  OCLPlugin.h  README.md  RippleCL.cpp  SharpenCL.cpp  SwirlCL.cpp  TestCL.cpp  Twirl.cpp  net.fxarena.opencl.Duotone.cl  ofxsTransformInteractCustom.cpp  ofxsTransformInteractCustom.h
OCL/Bloom/: Bloom.cpp  Info.plist  Makefile  net.fxarena.opencl.Bloom.cl
OCL/Bulge/: Bulge.cpp  Info.plist  Makefile  net.fxarena.opencl.Bulge.cl
OCL/CLFilter/: CLFilter.cpp  Info.plist  Makefile
OCL/Cartoon/: Cartoon.cpp  Makefile  net.fxarena.opencl.Cartoon.cl
OCL/Duotone/: Duotone.cpp  Makefile  net.fxarena.opencl.Duotone.cl
OCL/Edge/: Edge.cpp  Makefile  net.fxarena.opencl.Edge.cl
OCL/Looks/: Info.plist  Looks.cpp  Makefile
OCL/OpenCL/CL/: cl.hpp
OCL/Ripple/: Info.plist  Makefile  Ripple.cpp  net.fxarena.opencl.Ripple.cl
OCL/Sharpen/: Info.plist  Makefile  Sharpen.cpp  net.fxarena.opencl.Sharpen.cl
OCL/Swirl/: Makefile  Swirl.cpp
OCL/TestCL/: Info.plist  Makefile  TestCL.cpp
OCL/Twirl/: Info.plist  Makefile  Twirl.cpp  net.fxarena.opencl.Twirl.cl
OCL/Vibrance/: Info.plist  Makefile  Vibrance.cpp
OCL/pasture/: Cartoon.cpp  Edge.cpp  net.fxarena.opencl.Cartoon.cl  net.fxarena.opencl.Edge.cl  net.fxarena.opencl.Sharpen.cl
OCL/pasture/Cartoon/: Info.plist  Makefile
OCL/pasture/Edge/: Info.plist  Makefile
OCL/pasture/Sharpen/: Makefile
OCL/share/: net.fxarena.opencl.Vibrance.cl
OCL/src/: Bloom.cpp  Bulge.cpp  CLFilter.cpp  Duotone.cpp  OCLPlugin.cpp  Vibrance.cpp  ofxsTransformInteractCustom.cpp
Oilpaint/: Info.plist  Makefile  Oilpaint.cpp  Oilpaint.h  PluginRegistration.cpp
OpenCL/: OCLPlugin.h  README.md
OpenRaster/: Info.plist  Makefile  OpenRaster.cpp
Plugin/: Info.plist  Makefile  PluginRegistrationCombined.cpp  manifest  spec
Polar/: Info.plist  Makefile  PluginRegistration.cpp  Polar.cpp  Polar.h
Polaroid/: Info.plist  Makefile  PluginRegistration.cpp  Polaroid.cpp  Polaroid.h
PovRay/: Makefile  PluginRegistration.cpp  PovRay.cpp  PovRay.h
ReadCDR/: Info.plist  Makefile  ReadCDR.cpp
ReadKRA/: Makefile  ReadKRA.cpp
ReadKrita/: Info.plist  Makefile  ReadKrita.cpp
ReadMVG/: Info.plist  Makefile  PluginRegistration.cpp  ReadMVG.cpp  ReadMVG.h
ReadMisc/: Info.plist  Makefile  PluginRegistration.cpp  ReadMisc.cpp  ReadMisc.h
ReadORA/: Info.plist  Makefile  PluginRegistration.cpp  ReadORA.cpp  ReadORA.h  test.ora
ReadPDF/: Info.plist  Makefile  ReadPDF.cpp
ReadPSD/: Info.plist  Makefile  PluginRegistration.cpp  ReadPSD.cpp  ReadPSD.h
ReadSVG/: Info.plist  Makefile  PluginRegistration.cpp  ReadSVG.cpp  ReadSVG.h
ReadXCF/: Info.plist  Makefile  (+3 more)
Text/: CMakeLists.txt  Info.plist  Makefile  PluginRegistration.cpp  PluginRegistrationCombined.cpp  RichText.cpp  RichText.h  RichTextOFX.cpp  Text.cpp  Text.h  TextFX.cpp  TextOFX.cpp
(+146 files in other folders)
